# epub-translate

./: .gitignore  .qmlls.ini  CMakeLists.txt  Convert.cpp  Convert.h  Main.qml  icons.qrc  main.cpp
ECM/share/ECM/cmake/: ECMConfig.cmake  ECMConfigVersion.cmake
ECM/share/ECM/find-modules/: Find7Zip.cmake  Find7z.cmake  FindCanberra.cmake  FindEGL.cmake  FindGLIB2.cmake  FindGperf.cmake  FindGradle.cmake  FindIcoTool.cmake  FindInotify.cmake  FindIsoCodes.cmake  FindKF5.cmake  FindKF6.cmake  FindLibExiv2.cmake  FindLibGit2.cmake  FindLibMount.cmake  FindLibcap.cmake  FindOpenEXR.cmake  FindPhoneNumber.cmake  FindPoppler.cmake  FindPulseAudio.cmake  FindQHelpGenerator.cmake  FindQtWaylandScanner.cmake  FindReuseTool.cmake  FindSasl2.cmake  FindSeccomp.cmake  FindSharedMimeInfo.cmake  FindTaglib.cmake  FindUDev.cmake  FindWayland.cmake  FindWaylandProtocols.cmake  FindWaylandScanner.cmake  FindX11_XCB.cmake  FindXCB.cmake  Findepoxy.cmake  Findgzip.cmake  local.properties.cmake  settings.gradle.cmake
ECM/share/ECM/kde-modules/: KDECMakeSettings.cmake  KDEClangFormat.cmake  KDECompilerSettings.cmake  KDEFrameworkCompilerLegacySettings.cmake  KDEFrameworkCompilerSettings.cmake  KDEGitCommitHooks.cmake  KDEInstallDirs.cmake  KDEInstallDirs5.cmake  KDEInstallDirs6.cmake  KDEInstallDirsCommon.cmake  KDEMetaInfoPlatformCheck.cmake  KDEPackageAppTemplates.cmake  KDESetupPrefixScript.cmake  appstreamtest.cmake  clang-format.cmake  prefix.sh.cmake  prefix.sh.fish.cmake
ECM/share/ECM/modules/: CheckAtomic.cmake  ECMAddAndroidApk.cmake  ECMAddAppIcon.cmake  ECMAddQch.cmake  ECMAddQtDesignerPlugin.cmake  ECMAddTests.cmake  ECMCheckOutboundLicense.cmake  ECMConfiguredInstall.cmake  ECMCoverageOption.cmake  ECMCreateQmFromPoFiles.cmake  ECMDeprecationSettings.cmake  ECMEnableSanitizers.cmake  ECMFeatureSummary.cmake  ECMFindModuleHelpers.cmake  ECMFindQmlModule.cmake  ECMFindQmlModule.cmake.in  ECMGenerateDBusServiceFile.cmake  ECMGenerateQDoc.cmake  (+39 more)
zlib/share/pkgconfig/: zlib.pc
(+16 files in other folders)
